--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -2,3 +2,40 @@
 @import './globalStyling/colors';
 @import './globalStyling/variables';
 @import './globalStyling/components';
+
+// ---- Hero section
+.section-hero {
+  width: 100%;
+  @include flex-justify__c-items__c();
+  padding: 0 10rem;
+}
+
+#hero-content {
+  width: 50%;
+  @include flex-column-justify__c-items__s();
+}
+
+#hero-image-container {
+  width: 50%;
+
+  #hero-image {
+    width: 100%;
+    // height: 100vh;
+  }
+}
+
+.hero-title {
+  width: 80%;
+}
+
+.hero-text {
+  margin-top: 2rem;
+}
+
+#hero-btn-container {
+  margin-top: 2rem;
+
+  #hero-btn-container__text {
+    margin-left: 1rem;
+  }
+}
