--- a/public/styles/globalStyling/_variables.scss
+++ b/public/styles/globalStyling/_variables.scss
@@ -1,3 +1,4 @@
+// Flex - Row
 @mixin flex-justify__b-items__c {
   display: flex;
   justify-content: space-between;
@@ -10,9 +11,23 @@
   align-items: center;
 }
 
+@mixin flex-justify__s-items__c {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+// Column
 @mixin flex-column-justify__c-items__s {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
+
+@mixin flex-column-justify__c-items__c {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
