Styled mobile app section

--- a/public/styles/globalStyling/_colors.scss
+++ b/public/styles/globalStyling/_colors.scss
@@ -16,3 +16,22 @@ $white: #fff;
 $black: #000;
 $cadet-blue-crayola: #78818a;
 
+// Background Color
+.icon-box-bg-tomato {
+  background: $tomato;
+}
+
+.icon-box-bg-celtic-blue {
+  background: $celtic-blue;
+}
+
+.icon-box-bg-yello {
+  background: $maximum-yellow-red;
+}
+
+.icon-box-bg-green {
+  background: $dark-turquoise;
+}
+.icon-box-bg-greenp {
+  background: $green-pantone;
+}
