Styled offers section

--- a/public/styles/globalStyling/_colors.scss
+++ b/public/styles/globalStyling/_colors.scss
@@ -35,3 +35,8 @@ $cadet-blue-crayola: #78818a;
 .icon-box-bg-greenp {
   background: $green-pantone;
 }
+
+// ---- Text Color
+.text-color-1 {
+  color: $cadet-blue-crayola;
+}
