--- a/public/styles/globalStyling/_components.scss
+++ b/public/styles/globalStyling/_components.scss
@@ -53,8 +53,6 @@
   font-size: 1.6rem;
 }
 
-
-
 // ---- Title ----
 .title-1 {
   font: {
@@ -77,11 +75,12 @@
   }
 }
 
+.title-3 {
+  font-size: 3rem;
+}
+
 .title-4 {
-  font: {
-    size: 2rem;
-    weight: 500;
-  }
+  font-size: 2rem;
 }
 
 .title-5 {
@@ -108,9 +107,13 @@
   font-size: 1.6rem;
 }
 
-// ---- Text Color
-.text-color-1 {
-  color: $cadet-blue-crayola;
+// ---- Font Weight ----
+.weight-500 {
+  font-weight: 500;
+}
+
+.weight-600 {
+  font-weight: 600;
 }
 
 // ---- Cards ----
@@ -139,7 +142,37 @@
   }
 }
 
+// Rectangle Card
+.Rectangle-card {
+  background: $white;
+  padding: 2rem 3rem;
+  margin-top: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 25px 25px 35px 15px rgba(190, 190, 190, 0.171);
+
+  .Rectangle-card__info {
+    margin-top: 2rem;
+  }
+}
+
 // ---- Image ----
 .image-cotainer {
   width: 22rem;
+}
+
+.image-cotainer-s {
+  width: 60rem;
+}
+
+// ---- Border ----
+.border-left-green {
+  border-left: 4px solid $green-pantone;
+}
+
+.border-left-tomato {
+  border-left: 4px solid $tomato;
+}
+
+.border-left-celtic {
+  border-left: 4px solid $celtic-blue;
 }
