--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,9 +1,10 @@
+// Import Sass Files
 @import './globalStyling/reset';
 @import './globalStyling/colors';
 @import './globalStyling/variables';
 @import './globalStyling/components';
 
-// ---- Section style
+// ---- Section style ----
 .section-style-magnolia {
   @include flex-justify__c-items__c();
   background: $magnolia;
@@ -30,7 +31,7 @@
   padding: 1rem 4rem;
 }
 
-// ---- Hero section
+// ---- Hero section ----
 .section-hero {
   width: 100%;
   @include flex-justify__c-items__c();
@@ -47,7 +48,6 @@
 
   #hero-image {
     width: 100%;
-    // height: 100vh;
   }
 }
 
@@ -67,7 +67,7 @@
   }
 }
 
-// ---- Our Process Section
+// ---- Our Process Section ----
 // .section-our-process {
   // @include flex-justify__c-items__c();
   // background: $magnolia;
@@ -83,11 +83,11 @@
   }
 }
 
-// ---- Mobile App section
-.section-mobile-app {
+// ---- Features / Mobile App Section ----
+.section-features {
   margin-top: 18rem;
 
-  .section-mobile-app__container {
+  .section-features__container {
     width: 100%;
     height: 100%;
     @include flex-justify__c-items__c();
@@ -99,16 +99,20 @@
   margin-right: 76rem;
 }
 
-.mobile-app-content {
+.laptop-image {
+  margin-left: 10rem;
+}
+
+.features-content {
   width: 50rem;
   margin-left: 5rem;
 }
 
-.mobile-app-title {
+.features-title {
   margin-top: 2rem;
 }
 
-.mobile-app-info {
+.features-info {
   margin-top: 2rem;
 }
 
@@ -128,7 +132,7 @@
 
 // ---- Offers Section ----
 .section-offers {
-  margin-top: 20rem;
+  margin-top: 10rem;
   @include flex-column-justify__c-items__c();
 }
 
