--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -153,3 +153,11 @@
     width: 80%;
   }
 }
+
+// ---- Sign Up Modal ----
+.section-style-white {
+  .sign-up-modal {
+    margin-top: 10rem;
+    
+  }
+}
