--- a/public/styles/globalStyling/_components.scss
+++ b/public/styles/globalStyling/_components.scss
@@ -21,6 +21,26 @@
   }
 }
 
+.close-btn {
+  width: 2.6rem;
+  height: 2.6rem;
+  @include flex-justify__c-items__c();
+  background: $red;
+  color: $white;
+  border-radius: 50%;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: 0.2s;
+
+  &:hover {
+    background: $red-dark;
+  }
+
+  &:active {
+    background: $red-dark2;
+  }
+}
+
 .button-m {
   padding: 1rem 1.5rem;
 }
@@ -156,16 +176,59 @@
   }
 }
 
+// Sign Up Modal
+.sign-up-modal {
+  width: 70%;
+  @include flex-justify__c-items__c();
+  border-radius: 15px;
+  box-shadow: 0 25px 35px 15px rgba(190, 190, 190, 0.384);
+  position: relative;
+  transform: translate3d(0,0,0) scale(1)!important;
+  opacity: 1!important;
+
+  // Close Button
+  .close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    z-index: 2;
+  }
+
+  // Content Container
+  .sign-up-content {
+    margin-top: 2rem;
+
+    h3 {
+      margin-top: 2rem;
+    }
+
+    p {
+      margin-top: 2rem;
+    }
+
+    #sign-up-btn {
+      margin-top: 2rem;
+    }
+  }
+
+  // Image
+  
+}
+
 // ---- Image ----
 .image-cotainer {
   width: 22rem;
+}
+
+.image-cotainer-s {
+  width: 40rem;
 }
 
 .image-cotainer-m {
   width: 50rem;
 }
 
-.image-cotainer-s {
+.image-cotainer-l {
   width: 60rem;
 }
 
