--- a/public/styles/globalStyling/_colors.scss
+++ b/public/styles/globalStyling/_colors.scss
@@ -22,6 +22,7 @@ $cadet: #656c74;
 $red: #FA243C;
 $red-dark: #dd2238;
 $red-dark2: #bb1e30;
+$transparent: #ffffff00;
 
 // ---- Background Color
 .icon-box-bg-tomato {
