--- a/public/styles/globalStyling/_components.scss
+++ b/public/styles/globalStyling/_components.scss
@@ -25,19 +25,21 @@
   width: 2.6rem;
   height: 2.6rem;
   @include flex-justify__c-items__c();
-  background: $red;
-  color: $white;
+  background: $white;
+  color: $red;
+  border: 2px solid $red;
   border-radius: 50%;
   font-size: 2rem;
   cursor: pointer;
   transition: 0.2s;
 
   &:hover {
-    background: $red-dark;
+    background: $red;
+    color: $white;
   }
 
   &:active {
-    background: $red-dark2;
+    background: $red-dark;
   }
 }
 
@@ -47,6 +49,19 @@
 
 .button-l {
   padding: 1.2rem 1.5rem;
+}
+
+// ---- Input ----
+.input-box {
+  background: $transparent;
+  border: 2px solid $cadet;
+  border-radius: 10px;
+  padding: 3px;
+
+  input {
+    background: $transparent;
+    padding: 0 1rem;
+  }
 }
 
 // ---- Icons ----
@@ -71,6 +86,25 @@
   color: $white;
   border-radius: 8px;
   font-size: 1.6rem;
+}
+
+.icon-box-s {
+  width: 3rem;
+  height: 3rem;
+  @include flex-justify__c-items__c();
+  background: $transparent;
+  color: $tomato;
+  border: 1px solid $tomato;
+  border-radius: 50%;
+  font-size: 1.4rem;
+  cursor: pointer;
+  transition: 0.2s;
+
+  &:hover {
+    background: $tomato;
+    color: $white;
+    box-shadow: 0 10px 15px 5px rgba(190, 190, 190, 0.384);
+  }
 }
 
 // ---- Title ----
@@ -104,10 +138,7 @@
 }
 
 .title-5 {
-  font: {
-    size: 1.6rem;
-    weight: 500;
-  }
+  font-size: 1.6rem;
 }
 
 .title-4-big {
@@ -127,6 +158,12 @@
   font-size: 1.6rem;
 }
 
+.text-decoration {
+  &:hover {
+    text-decoration: underline solid $cadet 2px;
+  }
+}
+
 // ---- Font Weight ----
 .weight-500 {
   font-weight: 500;
@@ -134,6 +171,11 @@
 
 .weight-600 {
   font-weight: 600;
+}
+
+// Line Height
+.line-height-1-5 {
+  line-height: 1.5;
 }
 
 // ---- Cards ----
