--- a/public/styles/shared/footer.css
+++ b/public/styles/shared/footer.css
@@ -1,17 +1,448 @@
-/* Error: expected "{".
- *   ,
- * 1 | footer
- *   |       ^
- *   '
- *   styles\shared\footer.scss 1:7  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected "{".\a   \2577 \a 1 \2502  footer\a   \2502        ^\a   \2575 \a   styles\\shared\\footer.scss 1:7  root stylesheet';
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+body {
+  font-family: Roboto;
 }
+
+h1 {
+  font-size: 3.7rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+h4 {
+  font-size: 1.2rem;
+}
+
+h5 {
+  font-size: 1rem;
+}
+
+p,
+span,
+li {
+  font-size: 1.4rem;
+  letter-spacing: 0.02rem;
+}
+
+::selection {
+  color: #fff;
+  background: #9174fa;
+}
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+li,
+div,
+nav,
+p,
+img,
+span,
+input {
+  padding: 0;
+  margin: 0;
+  font-weight: normal;
+}
+
+input {
+  border: 0;
+  outline: none;
+  font-size: 1.5rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  all: unset;
+}
+
+hr {
+  border: 0;
+}
+
+/* SCSS HEX */
+.icon-box-bg-tomato {
+  background: #fa6444ff;
+}
+
+.icon-box-bg-celtic-blue {
+  background: #0f69c9ff;
+}
+
+.icon-box-bg-yello {
+  background: #ffbb41ff;
+}
+
+.icon-box-bg-r-blue {
+  background: #5ed3f3;
+}
+
+.icon-box-bg-green {
+  background: #44d4d7ff;
+}
+
+.icon-box-bg-greenp {
+  background: #13b237ff;
+}
+
+.text-color-1 {
+  color: #78818a;
+}
+
+.text-color-2 {
+  color: #656c74;
+}
+
+.logo {
+  width: 10rem;
+}
+
+.button-style {
+  background: #7854f7ff;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.4rem;
+}
+.button-style:hover {
+  background: #6c4cdd;
+  transition: 0.2s;
+}
+.button-style:active {
+  background: #6144ca;
+}
+
+.close-btn {
+  width: 2.6rem;
+  height: 2.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  color: #FA243C;
+  border: 2px solid #FA243C;
+  border-radius: 50%;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.close-btn:hover {
+  background: #FA243C;
+  color: #fff;
+}
+.close-btn:active {
+  background: #dd2238;
+}
+
+.button-m {
+  padding: 1rem 1.5rem;
+}
+
+.button-l {
+  padding: 1.2rem 1.5rem;
+}
+
+.input-box {
+  background: #ffffff00;
+  border: 2px solid #656c74;
+  border-radius: 10px;
+  padding: 3px;
+}
+.input-box input {
+  background: #ffffff00;
+  padding: 0 1rem;
+}
+
+.fa-chevron-down {
+  color: #fff;
+  margin-left: 1rem;
+}
+
+.icon-box-l {
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  border-radius: 10px;
+  font-size: 2rem;
+}
+
+.icon-box-m {
+  width: 4rem;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  border-radius: 8px;
+  font-size: 1.6rem;
+}
+
+.icon-box-s {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff00;
+  color: #fa6444ff;
+  border: 1px solid #fa6444ff;
+  border-radius: 50%;
+  font-size: 1.4rem;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.icon-box-s:hover {
+  background: #fa6444ff;
+  color: #fff;
+  box-shadow: 0 10px 15px 5px rgba(190, 190, 190, 0.384);
+}
+
+.title-1 {
+  font-size: 6rem;
+  font-weight: 600;
+}
+
+.title-2-700 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.title-2-800 {
+  font-size: 4rem;
+  font-weight: 800;
+}
+
+.title-3 {
+  font-size: 3rem;
+}
+
+.title-4 {
+  font-size: 2rem;
+}
+
+.title-5 {
+  font-size: 1.6rem;
+}
+
+.title-4-big {
+  font-size: 1.7rem;
+}
+
+.text-1 {
+  font-size: 1.2rem;
+}
+
+.text-2 {
+  font-size: 1.4rem;
+}
+
+.text-3 {
+  font-size: 1.6rem;
+}
+
+.text-decoration:hover {
+  text-decoration: underline solid #656c74 2px;
+}
+
+.weight-500 {
+  font-weight: 500;
+}
+
+.weight-600 {
+  font-weight: 600;
+}
+
+.line-height-1-5 {
+  line-height: 1.5;
+}
+
+.feature-card {
+  width: 21rem;
+  height: 22rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #f4f4ffff;
+  padding: 3rem 2.5rem;
+  margin-right: 2rem;
+  border-radius: 5px;
+  text-align: center;
+}
+.feature-card h4 {
+  margin-top: 2rem;
+}
+.feature-card p {
+  margin-top: 1.5rem;
+}
+.feature-card:hover {
+  background: #fff4ef;
+  box-shadow: 25px 25px 35px 15px rgba(190, 190, 190, 0.096);
+  transition: 0.2s;
+}
+
+.Rectangle-card {
+  background: #fff;
+  padding: 2rem 3rem;
+  margin-top: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 25px 25px 35px 15px rgba(190, 190, 190, 0.171);
+}
+.Rectangle-card .Rectangle-card__info {
+  margin-top: 2rem;
+}
+
+.sign-up-modal {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  box-shadow: 0 25px 35px 15px rgba(190, 190, 190, 0.384);
+  position: relative;
+  transform: translate3d(0, 0, 0) scale(1) !important;
+  opacity: 1 !important;
+}
+.sign-up-modal .close-btn {
+  position: absolute;
+  top: 1rem;
+  right: 2rem;
+  z-index: 2;
+}
+.sign-up-modal .sign-up-content {
+  margin-top: 2rem;
+}
+.sign-up-modal .sign-up-content h3 {
+  margin-top: 2rem;
+}
+.sign-up-modal .sign-up-content p {
+  margin-top: 2rem;
+}
+.sign-up-modal .sign-up-content #sign-up-btn {
+  margin-top: 2rem;
+}
+
+.image-cotainer {
+  width: 22rem;
+}
+
+.image-cotainer-s {
+  width: 40rem;
+}
+
+.image-cotainer-m {
+  width: 50rem;
+}
+
+.image-cotainer-l {
+  width: 60rem;
+}
+
+.border-left-green {
+  border-left: 4px solid #13b237ff;
+}
+
+.border-left-tomato {
+  border-left: 4px solid #fa6444ff;
+}
+
+.border-left-celtic {
+  border-left: 4px solid #0f69c9ff;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #b19df8;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7854f7ff;
+  border-radius: 5px;
+}
+
+:root {
+  scrollbar-color: #7854f7ff #7754f728 !important;
+  scrollbar-width: thin !important;
+}
+
+.footer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background: #fff4ef;
+  margin-top: 5rem;
+  padding: 5rem 10rem;
+}
+
+.company-info-container {
+  width: 25%;
+  margin-right: 10rem;
+}
+.company-info-container p {
+  margin-top: 2rem;
+}
+.company-info-container .social-icon-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 2rem;
+}
+.company-info-container .social-icon-container .social-icon {
+  margin-right: 0.9rem;
+}
+
+.footer-nav-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.footer-nav-section {
+  margin-right: 10rem;
+}
+.footer-nav-section .footer-nav,
+.footer-nav-section .footer-nav__item {
+  margin-top: 2rem;
+}
+
+/*# sourceMappingURL=footer.css.map */
