--- a/public/styles/shared/footer.scss
+++ b/public/styles/shared/footer.scss
@@ -10,6 +10,7 @@
   background: $Seashell;
   margin-top: 5rem;
   padding: 5rem 10rem;
+  // clip-path: polygon(0% 5%, 20% 0%, 100% 5%, 100% 100%, 0% 100%);
 }
 
 .company-info-container {
