--- a/public/styles/globalStyling/_variables.scss
+++ b/public/styles/globalStyling/_variables.scss
@@ -50,3 +50,25 @@
   justify-content: center;
   align-items: center;
 }
+
+// ---- Transform ----
+// Transform
+@mixin transform-y {
+  &:hover {
+    transform: translateY(-2rem);
+    transition: 0.5s;
+  }
+}
+
+@mixin transform-x {
+  &:hover {
+    transform: translateX(-2rem);
+    transition: 0.5s;
+  }
+}
+
+// Transform Back
+@mixin transform-back {
+  transform: translateY(0);
+  transition: 0.5s;
+}
