--- a/public/styles/globalStyling/_components.scss
+++ b/public/styles/globalStyling/_components.scss
@@ -68,6 +68,14 @@
   }
 }
 
+@media (min-width: 70rem) {
+  .input-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 // ---- Icons ----
 .fa-chevron-down {
   color: $white;
